# SceneGraph

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: protobuf.yml
docs/: code-generation.md  design-principles.md  graph-layers.md  open-questions.md  protobuf-geometry.md  schema-overview.md  usage-examples.md  visualization.md
examples/: room.scenegraph.json
examples/cpp/: CMakeLists.txt  build_room.cc
examples/csharp/: Program.cs  SceneGraph.Example.csproj
examples/python/: build_room.py
proto/: scenegraph.proto
schema/: scenegraph.schema.json
tools/: generate_protos.py
